2002-11-14  Mikael Djurfeldt  <mdj@linnaeus>

	* coop-pthreads.c, coop-pthreads.h: scm_internal_select should be
	part of the API, otherwise it's difficult to write Guile
	extensions using non-blocking I/O => moved #include
	"libguile/iselect.h" from coop-pthreads.c --> coop-pthreads.h.

	* coop-pthreads.c (scm_unlock_mutex): Changed s_lock_mutex -->
	s_unlock_mutex.

2002-11-10  Marius Vollmer  <mvo@zagadka.ping.de>

	* __scm.h (USE_THREADS, GUILE_ISELECT): Do not define here.  They
	are defined in configure.in.

	* threads.c: Removed SCM_API from function definitions.  SCM_API
	is only for declarations.

2002-11-07  Mikael Djurfeldt  <mdj@linnaeus>

	* coop-pthreads.h: Added support for thread specific data to the
	generic C API for the coop-pthreads case.

	* threads.c, threads.h (scm_cond_init): Undo unintentional API
	change.
	(scm_cond_broadcast): Added missing function.

2002-11-04  Marius Vollmer  <marius.vollmer@uni-dortmund.de>

	* coop.c (coop_next_runnable_thread): Removed, wich should have
	happened when GUILE_ISELECT was hard-wired.

2002-11-03  Marius Vollmer  <mvo@zagadka.ping.de>

	* Makefile.am (libguile_la_SOURCES): Added threads.c
	(DOT_DOC_FILES): Added threads.doc.
	(DOT_X_FILES): Added threads.x.
	(EXTRA_libguile_la_SOURCES): Removed threads.c.
	(noinst_HEADERS): Added coop-pthreads.c.
	(modinclude_HEADERS): Added coop-pthreads.h.

	* __scm.h (USE_THREADS, GUILE_ISELECT): Define when
	SCM_DEBUG_DEPRECATED.  Removed their use thru-out Guile.

	* iselect.c: Include "_scm.h" before testing HAVE_UNISTD_H.
	Thanks to Bill Schottstaedt!

	* numbers.c (scm_integer_expt): Make 0^z == 0 for z != 0.

	* _scm.h (HAVE_RESTARTABLE_SYSCALLS): Do define even when
	SCM_COPT_THREADS is defined.
	(SCM_SYSCALL): Use EINTR-expection version when SCM_COPT_THREADS
	is defined.
	
	* coop-pthreads.c: Some harmless renamings of internal stuff.
	(create_thread): New, generalized version of
	scm_call_with_new_thread.
	(scm_call_with_new_thread): Use it.